# MHTR

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  OffsetHunter.sln  README.md
OffsetHunter/: Arm32CapstoneHelper.cpp  Arm32CapstoneHelper.h  Arm32CapstoneHelperFactory.cpp  Arm32CapstoneHelperFactory.h  Arm32ThumbCapstoneHelper.cpp  Arm32ThumbCapstoneHelperFactory.cpp  BinaryFormatClassifier.cpp  BinaryFormatClassifier.h  CapstoneAux.cpp  CapstoneAux.h  CapstoneHelperProvider.cpp  CapstoneHelperProvider.h  ConfigManager.cpp  ConfigManager.h  ContainerDisplacer.cpp  ContainerDisplacer.h  CppLValueRValueWrapper.cpp  CppLValueRValueWrapper.h  CppNestedLValueRValueWrapper.cpp  CppNestedLValueRValueWrapper.h  DumpTargetGroup.cpp  DumpTargetGroup.h  ELF32BinaryFormat.cpp  ELF32BinaryFormat.h  ELFHelper.cpp  FileHelper.cpp  FileHelper.h  FutureOffset.cpp  FutureOffset.h  FutureOffsetDesc.cpp  FutureOffsetResultInfo.cpp  FutureOffsetResultInfo.h  FuturePattern.cpp  FuturePattern.h  FuturePatternResultInfo.cpp  FuturePatternResultInfo.h  FutureResultClassifier.cpp  GeneralHelpers.cpp  HPPManager.cpp  HPPManager.h  (+64 more)
OffsetHunter/Test/: BinArm32A.json  BinArm64A.json  BinArm64B.bin.bak  DummyOffsetMgr.hpp  ExpectedOutput.hpp  OffsetMgr.hpp  config.json  dummyConfig.json  dummyObfBook.json  dummyTargets.json  offsets_ARM32.json  offsets_ARM64.json  targets.json
cmake/: MHTRConfig.cmake.in  MHTRConfig.in.cmake  PlatformInfo.cmake  build_helper.cmake  platform_info.cmake
include/: Api.h  AsmExtractedProcedureEntryProvider.h  BufferView.h  Capstone.h  FarAddressLookup.h  FileBufferView.h  FileView.h  FunctionScanConfig.h  IAddressesProvider.h  IFarAddressResolver.h  ILookable.h  ILookableMetadata.h  IOffsetCalculator.h  IProcedureEntryProvider.h  IRelativeDispProvider.h  Metadata.h  MetadataSynthers.h  MultiException.h  OffsetCalculator.h  PatternScan.h  Pltform.h  ProcedureRangeProvider.h  Range.h  RangeProvider.h  Storage.h  SyntherFileOp.h
include/BinFmt/: ELF.h
include/Binary/: ELF.h  Factory.h  File.h  IBinary.h  IFactory.h  Unknown.h
include/Builder/: IRange.h
include/CLI/: MH.h
include/CStone/: CStone.h  DismHandle.h  Factory.h  ICapstone.h  IFactory.h  IHeuristic.h  IProvider.h  IUtility.h  Insn.h  Provider.h  Utility.h
include/Exception/: Multi.h
include/Factory/: FromPluginFolderMultiPlugin.h  FromTargetBinJsonBinary.h  IMultiMetadata.h  IMultiPlugin.h  INamespace.h  MetadataTarget.h
include/IR/: IFactory.h  IProvider.h  Metadata.h  ToMetadata.h
include/MHTR/: Buffer.h  FarAddressLookup.h  FunctionScanConfig.h  ILookable.h  ILookableMetadata.h  IOffsetCalculator.h  IRange.h  Library.h  OffsetCalculator.h  PatternScan.h  PatternScanConfig.h  Range.h  Singleton.h  Storage.h
include/MHTRSDK/: MHTRSDK.h
include/Metadata/: Container.h  Lookups.h  Metadata.h  Result.h  Synthers.h  Target.h  Utility.h
include/OH/: Arm32CapstoneHelper.h  Arm32CapstoneHelperFactory.h  Arm32ThumbCapstoneHelper.h  Arm32ThumbCapstoneHelperFactory.h  Arm64CapstoneHelper.h  Arm64CapstoneHelperFactory.h  ConfigManager.h  ContainerDisplacer.h  CppLValueRValueWrapper.h  DumpTargetGroup.h  ELF.h  ELF64BinaryFormat.h  ELFHelper.h  FileHelper.h  FutureOffset.h  FutureOffsetResultInfo.h  FutureResultClassifier.h  GeneralHelpers.h  HPPManager.h  HardcodedOffsetInfo.h  IBinaryFormat.h  ICapstoneHelper.h  ICapstoneHelperFactory.h  IChild.h  IDumpTarget.h  IFutureResult.h  IJsonAccesor.h  (+17 more)
plugin/: CMakeLists.txt  HPPRTReportPlugin.cpp
samples/: DummyOffsetMgrOld.hpp  dummyConfig.json  libdummy.json  offsets_ARM32.json  result.report.hpp  result.report.txt  targets.json  test.report.hpp  test.report.txt
src/: Arm32CapstoneHelper.cpp  Arm32CapstoneHelperFactory.cpp  Arm32ThumbCapstoneHelper.cpp  Arm32ThumbCapstoneHelperFactory.cpp  Arm64CapstoneHelper.cpp  Arm64CapstoneHelperFactory.cpp  BinaryFormatClassifier.cpp  CMakeLists.txt  CStone.cpp  Capstone.cpp  CapstoneAux.cpp  CapstoneHelperProvider.cpp  ConfigManager.cpp  ContainerDisplacer.cpp  CppLValueRValueWrapper.cpp  CppNestedLValueRValueWrapper.cpp  DumpTargetGroup.cpp  ELF32BinaryFormat.cpp  ELFHelper.cpp  FarAddressLookup.cpp  FileHelper.cpp  FutureOffset.cpp  FutureOffsetResultInfo.cpp  FuturePattern.cpp  FuturePatternResultInfo.cpp  FutureResultClassifier.cpp  GeneralHelpers.cpp  HPPManager.cpp  HardcodedOffsetInfo.cpp  IBinaryFormat.cpp  ICapstoneHelper.cpp  ICapstoneHelperFactory.cpp  IChild.cpp  IDumpTarget.cpp  IFutureResult.cpp  IFutureResultInfo.cpp  IJsonAccesor.cpp  ILValueRValueWrapper.cpp  INestedLValueRValueWrapper.cpp  IOffsetScanAlgo.cpp  (+25 more)
src/Arch/AArch64/Resolver/: FarAddress.cpp
src/Arch/ARM/32/Resolver/: FarAddress.cpp
src/Arch/ARM/64/Resolver/: FarAddress.cpp
src/BinFmt/: ELF.cpp
src/Binary/: ELF.cpp  Factory.cpp  File.cpp  Unknown.cpp
src/BinaryFormats/: BinaryFormatClassifier.cpp  CMakeLists.txt  ELF64BinaryFormat.cpp  UnknownBinaryFormat.cpp
src/CLI/: CMakeLists.txt  MH.cpp  OffsetHunterCLI.cpp  main.cpp
src/Exception/: Multi.cpp  UnexpectedLayout.cpp
src/Factory/: FromPluginFolderMultiPlugin.cpp  FromTargetBinJsonBinary.cpp  MetadataTarget.cpp
src/File/: CMakeLists.txt  Operation.cpp
src/IR/: ToMetadata.cpp
src/IR/From/: Json.cpp
src/Metadata/: CMakeLists.txt  Lookups.cpp  Metadata.cpp  Result.cpp  Synthers.cpp  Target.cpp  Utility.cpp
src/Plugin/: Factory.cpp  Registration.cpp
src/Provider/: AsmExtractedProcedureEntry.cpp  FromFileJson.cpp  FromJsonPathJsonFile.cpp  FromJsonSingleNamespace.cpp  FromTargetBinJsonArchModeProvider.cpp  Json.cpp  ProcedureRange.cpp  ProcedureRangeChain.cpp  Range.cpp
src/Synther/: CMakeLists.txt  FileOperations.cpp  FunctionBlock.cpp  Identifier.cpp  IfBlock.cpp  Indent.cpp  Line.cpp  LineGroup.cpp  MultiLineGroup.cpp  MultiLineSingleLine.cpp  Namespace.cpp  NamespaceBlock.cpp  NamespacedIdentifier.cpp  ScopeBlock.cpp  Utility.cpp
src/Synther/Cxx/: Header.cpp
src/Synther/Cxx/Builder/: HeaderIncludeBlock.cpp
tests/: CLITest.cpp  CLITest.cxx  CMakeLists.txt  MetadataAndGeneralTests.cxx  SamplePlugin.cxx  sampleTest.cpp  test.cpp  test.cxx
(+137 files in other folders)
